--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Discogs</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <div id="app">
-      {{ message }}
+      <div v-for="item in collection" class="square" :style="{ 'background-image': `url('${item.picture}')` }"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@0/dist/axios.min.js"></script>
