--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <div id="app">
-      <div v-for="item in collection" class="square" :class="{ active: item.active }" :style="{ 'background-image': `url('${item.picture}')` }" @mouseover="item.active = true" @mouseleave="item.active = false">
+      <div class="header">
+        <input type="text" name="" value="" v-model="q" autofocus placeholder="Search Record">
+      </div>
+      <div v-for="item in filteredCollection" class="square" :class="{ active: item.active }" :style="{ 'background-image': `url('${item.picture}')` }" @mouseover="item.active = true" @mouseleave="item.active = false">
         <div v-if="item.active" class="info">
           <h2>{{ item.artist }}</h2>
           <h3>{{ item.title }}</h3>
