--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div v-if="item.active" class="info">
           <p class="artist">{{ item.artist }}</p>
           <p>{{ item.title }}</p>
-          <p>{{ item.year }}</p>
+          <p class="year">{{ item.year }}</p>
         </div>
       </div>
     </div>
