--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <p class="artist">{{ item.artist }}</p>
           <p>{{ item.title }}</p>
           <p class="year">{{ item.year }}</p>
+          <p class="format">{{ item.format.join(', ') }}</p>
         </div>
       </div>
     </div>
