--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           <p class="format">{{ item.format.join(', ') }}</p>
         </div>
       </div>
+      <div class="footer">
+          {{ filteredCollection.length }}
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@0/dist/axios.min.js"></script>
