--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <div class="header">
         <a v-if="activeList === 'collection'" @click.prevent="setList('wantlist')" href='#wantlist' class="toggle">Show Wantlist</a>
         <a v-if="activeList === 'wantlist'" @click.prevent="setList('collection')" href='#collection' class="toggle">Show Collection</a>
+        <a v-for="tag in tags" @click.prevent="q = tag" class="toggle left">{{ tag }}</a>
         <input type="text" name="" value="" v-model="q" :placeholder="'Search from ' + activeList">
       </div>
       <div
@@ -24,7 +25,7 @@
           <p class="artist">{{ item.artist }}</p>
           <p>{{ item.title }}</p>
           <p class="year">{{ item.year }}</p>
-          <p class="format">{{ item.format.join(', ') }}</p>
+          <p class="format" :title="item.format.join(', ')">{{ item.tags.join(', ') }}</p>
         </div>
       </div>
       <div class="footer">
