Split tags to format, type and region

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div id="app">
       <div class="header">
-        <a v-if="activeList === 'collection'" @click.prevent="setList('wantlist')" href='#wantlist' class="toggle">Show Wantlist</a>
-        <a v-if="activeList === 'wantlist'" @click.prevent="setList('collection')" href='#collection' class="toggle">Show Collection</a>
+        <a v-if="activeList === 'collection' && wantlist.length > 0" @click.prevent="setList('wantlist')" href='#wantlist' class="toggle">Show Wantlist</a>
+        <a v-if="activeList === 'wantlist' && collection.length > 0" @click.prevent="setList('collection')" href='#collection' class="toggle">Show Collection</a>
         <a v-for="tag in tags" @click.prevent="filterByTag(tag)" :class="{ active: isActiveTag(tag) }" class="toggle left">{{ tag }}</a>
         <input type="text" name="" value="" v-model="q" :placeholder="'Search from ' + activeList">
       </div>
@@ -25,7 +25,7 @@
           <p class="artist">{{ item.artist }}</p>
           <p>{{ item.title }}</p>
           <p class="year">{{ item.year }}</p>
-          <p class="format" :title="item.format.join(', ')">{{ item.tags.join(', ') }}</p>
+          <p class="format">{{ item.format.join(', ') }}</p>
         </div>
       </div>
       <div class="footer">
