--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Discogs</title>
     <link rel="stylesheet" href="index.css">
+    <script defer data-domain="discogs.roots.ee" src="https://plausible.io/js/plausible.js"></script>
   </head>
   <body>
     <div id="app">
